# multi-tenant-app

./: .env.example  DOCUMENTATION.md  README.md  TECHNICAL_DOCUMENTATION.md  aerich.ini  pyproject.toml  pytest.ini
app/: config.py  database.py  main.py
app/db/: routing.py
app/middleware/: tenant_context.py
app/models/: core.py  tenant.py
app/routes/: core.py  tenant.py
app/services/: auth.py  tenant.py
app/utils/: auth.py
migrations/models/: 3_20250605212331_None.py  4_20250605215323_update.py
tests/: conftest.py  test_auth.py  test_core.py  test_db_routing.py  test_integration.py  test_main.py  test_middleware.py  test_models.py  test_services.py  test_tenant.py
